tests/fixtures/errors/invalid_operands.cpp
// Test: invalid operands
int main() {
    int a = 5;
    char* p = nullptr;
    return a | p;
}
